[PAYM-448] Expand the OpenAPI spec
